--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status"></div>
-        <img class="position-absolute top-50 start-50 translate-middle" src="img/icons2/sketch.png" alt="Icon">
+        <img class="position-absolute top-50 start-50 translate-middle" src="img/icons/icon-1.png" alt="Icon">
     </div>
     <!-- Spinner End -->
 
@@ -46,8 +46,8 @@
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-3">
-                    <a class="text-body px-2" href="tel:+0123456789"><i class="fa fa-phone-alt text-primary me-2"></i>070 527 67 70</a>
-                    <a class="text-body px-2" href="mailto:info@example.com"><i class="fa fa-envelope-open text-primary me-2"></i>info@narkebygg.se</a>
+                    <a class="text-body px-2" href="tel:+46705276770"><i class="fa fa-phone-alt text-primary me-2"></i>070 527 67 70</a>
+                    <a class="text-body px-2" href="mailto:info@narkebygg.com"><i class="fa fa-envelope-open text-primary me-2"></i>info@narkebygg.se</a>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
