added new icons

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status"></div>
-        <img class="position-absolute top-50 start-50 translate-middle" src="img/icons/icon-1.png" alt="Icon">
+        <img class="position-absolute top-50 start-50 translate-middle" src="img/icons/icon-10.png" alt="Icon">
     </div>
     <!-- Spinner End -->
 
@@ -185,7 +185,7 @@
                     <div class="service-item d-flex position-relative text-center h-100">
                         <img class="bg-img" src="img/services/sidekix-media-RwXneIyqxAw-unsplash.jpg" alt="">
                         <div class="service-text p-5">
-                            <img class="mb-4" src="img/icons2/kitchen.png" alt="Icon">
+                            <img class="mb-4" src="img/icons/icon-3.png" alt="Icon">
                             <h3 class="mb-3">Kök</h3>
                             <p class="mb-4"> Vill ni veta mer? kontakta oss i formuläret längre ner på hemsidan</p>
                         </div>
@@ -195,7 +195,7 @@
                     <div class="service-item d-flex position-relative text-center h-100">
                         <img class="bg-img" src="img/services/r-architecture-P_0tnQ8hb70-unsplash.jpg" alt="">
                         <div class="service-text p-5">
-                            <img class="mb-4" src="img/icons2/bath.png" alt="Icon">
+                            <img class="mb-4" src="img/icons/icon-5.png" alt="Icon">
                             <h3 class="mb-3">Badrum</h3>
                             <p class="mb-4"> Vill ni veta mer? kontakta oss i formuläret längre ner på hemsidan</p>
                         </div>
@@ -205,7 +205,7 @@
                     <div class="service-item d-flex position-relative text-center h-100">
                         <img class="bg-img" src="img/services/nicolas-solerieu-4gRNmhGzYZE-unsplash.jpg" alt="">
                         <div class="service-text p-5">
-                            <img class="mb-4" src="img/icons2/window.png" alt="Icon">
+                            <img class="mb-4" src="img/icons/icon-12.png" alt="Icon">
                             <h3 class="mb-3">Fönster</h3>
                             <p class="mb-4"> Vill ni veta mer? kontakta oss i formuläret längre ner på hemsidan</p>
                         </div>
@@ -215,7 +215,7 @@
                     <div class="service-item d-flex position-relative text-center h-100">
                         <img class="bg-img" src="img/services/michael-jasmund-m_vEaZizd2s-unsplash.jpg" alt="">
                         <div class="service-text p-5">
-                            <img class="mb-4" src="img/icons2/roof.png" alt="Icon">
+                            <img class="mb-4" src="img/icons/icon-7.png" alt="Icon">
                             <h3 class="mb-3">Tak</h3>
                             <p class="mb-4"> Vill ni veta mer? kontakta oss i formuläret längre ner på hemsidan</p>
                         </div>
@@ -225,7 +225,7 @@
                     <div class="service-item d-flex position-relative text-center h-100">
                         <img class="bg-img" src="img/services/jackson-allan-M48wzb6VlEA-unsplash.jpg" alt="">
                         <div class="service-text p-5">
-                            <img class="mb-4" src="img/icons2/scaffolding.png" alt="Icon">
+                            <img class="mb-4" src="img/icons/icon-8.png" alt="Icon">
                             <h3 class="mb-3">Ställning</h3>
                             <p class="mb-4"> Vill ni veta mer? kontakta oss i formuläret längre ner på hemsidan</p>
                         </div>
@@ -235,7 +235,7 @@
                     <div class="service-item d-flex position-relative text-center h-100">
                         <img class="bg-img" src="img/services/edge2edge-media-qHhJkxare7A-unsplash.jpg" alt="">
                         <div class="service-text p-5">
-                            <img class="mb-4" src="img/icons2/screw.png" alt="Icon">
+                            <img class="mb-4" src="img/icons/icon-9.png" alt="Icon">
                             <h3 class="mb-3">Markskruv</h3>
                             <p class="mb-4"> Vill ni veta mer? kontakta oss i formuläret längre ner på hemsidan</p>
                         </div>
@@ -257,7 +257,7 @@
                     <div class="row g-4">
                         <div class="col-12">
                             <div class="d-flex align-items-start">
-                                <img class="flex-shrink-0" src="img/icons2/light-bulb.png" alt="Icon">
+                                <img class="flex-shrink-0" src="img/icons/icon-6.png" alt="Icon">
                                 <div class="ms-4">
                                     <h3>Affärsidé</h3>
                                     <p class="mb-0">Genom lyhördhet för våra kunders förväntningar skapar vi förutsättningar för ett samarbete, som bygger på förtroende och respekt för varandras kunnande och åsikter.</p>
@@ -266,7 +266,7 @@
                         </div>
                         <div class="col-12">
                             <div class="d-flex align-items-start">
-                                <img class="flex-shrink-0" src="img/icons2/agile.png" alt="Icon">
+                                <img class="flex-shrink-0" src="img/icons/icon-1.png" alt="Icon">
                                 <div class="ms-4">
                                     <h3>Vision</h3>
                                     <p class="mb-0">Överlämna en slutprodukt som är komplett och felfri.</p>
@@ -275,7 +275,7 @@
                         </div>
                         <div class="col-12">
                             <div class="d-flex align-items-start">
-                                <img class="flex-shrink-0" src="img/icons2/agile1.png" alt="Icon">
+                                <img class="flex-shrink-0" src="img/icons/icon-2.png" alt="Icon">
                                 <div class="ms-4">
                                     <h3>Mission</h3>
                                     <p class="mb-0">Starkt kundfokus. Ärlighet mot kunder och medarbetare. Göra varje beställare och projekt till en referens.</p>
@@ -284,7 +284,7 @@
                         </div>
                         <div class="col-12">
                             <div class="d-flex align-items-start">
-                                <img class="flex-shrink-0" src="img/icons2/checklist.png" alt="Icon">
+                                <img class="flex-shrink-0" src="img/icons/icon-4.png" alt="Icon">
                                 <div class="ms-4">
                                     <h3>Mål</h3>
                                     <p class="mb-0">Vårt mål är att leverera material och arbete till rätt pris, samt inom det uppsatta tidsperspektivet alltid slutföra ett påbörjat arbete även om det föreligger någon felkalkylering eller missbedömning av arbetet.</p>
