--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link active">Hem</a>
-                <a href="about.html" class="nav-item nav-link">Om Oss</a>
-                <a href="service.html" class="nav-item nav-link">Våra tjänster</a>
-                <a href="contact.html" class="nav-item nav-link">Kontakta oss</a>
-                <a href="contact.html" class="nav-item nav-link">Logga In</a>
+                <a href="#" class="nav-item nav-link active">Hem</a>
+                <a href="#about" class="nav-item nav-link">Om Oss</a>
+                <a href="#service" class="nav-item nav-link">Våra tjänster</a>
+                <a href="#contact" class="nav-item nav-link">Kontakta oss</a>
+                <!-- <a href="contact" class="nav-item nav-link">Logga In</a> -->
             </div>
         </div>
     </nav>
@@ -141,7 +141,7 @@
 
 
     <!-- About Start -->
-    <div class="container-xxl py-5">
+    <div id="about" class="container-xxl py-5">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
@@ -175,7 +175,7 @@
 
 
     <!-- Service Start -->
-    <div class="container-xxl py-5">
+    <div id="service" class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <h4 class="section-title">Våra tjänster</h4>
@@ -387,7 +387,7 @@
 
 
     <!-- Appointment Start -->
-    <div class="container-xxl py-5">
+    <div id="contact" class="container-xxl py-5">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
